--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,8 @@
 	<description>Maven Standalone Application</description>
 
 	<properties>
-		<sonar.host.url>http://35.154.242.68:9000/</sonar.host.url>
-		<sonar.login>admin</sonar.login>
-		<sonar.password>admin</sonar.password>
+		<sonar.host.url>http://15.206.147.40:9000/</sonar.host.url>
+		<sonar.login>659e326888b741063ecb65ccab45b0aa4fbccc3c</sonar.login>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
